fixed z-index order and background

--- a/src/views/IndexMenu/IndexMenu.module.css
+++ b/src/views/IndexMenu/IndexMenu.module.css
@@ -6,7 +6,6 @@
 
 .OrbiteContainer {
     position: absolute;
-    background-color: var(--cool-bg);
 }
 
 .tappa1{
